# SmartWealth

./: .gitignore  LOCAL_SETUP.md
AI-engine/: .env.example  .gitignore  README.md  pyproject.toml
AI-engine/app/: __init__.py  main.py
AI-engine/app/infrastructure/: container.py
AI-engine/app/prompts/: __init__.py  assessment_template.json  chat_intent_system.json  chat_narrate_system.json  chat_profile_patch_system.json  client_profile_context_system.json  common_rules.json  document_review_narrate.json  onboarding_completeness_system.json  phase_transition_narrate.json  planning_analyze.md  planning_compose.md  planning_compose_sections.md  planning_plan_document.md  prompt_loader.py
AI-engine/app/tools/: __init__.py  client_profile_chat_patch_tool.py  client_profile_sql_tool.py  discovery_dataset_sql_tool.py  ssot_lookup_tool.py
AI-engine/docs/: CODING_GUIDE.md  Discovery-requirement.md  endpoint.md
AI-engine/scripts/: assessment_test_server.py  generate_interaction_ai07_ai34.py  seed_ai_interaction_catalog.py  try_deepseek_prompt.py
AI-engine/scripts/sql/: ai_interaction_catalog_tables.sql  discovery.sql  migrate_ai_llm_profile_api_keys.sql  migrate_ai_llm_profile_system_prompt.sql  migrate_assessment_codes_to_common.sql  migrate_client_profile_onboarding.sql  migrate_completeness_loop_graph_column_rename.sql  orchestration_minimal.sql  seed_orchestration_complete.sql  seed_orchestration_incomplete.sql  seed_workflow_ai_pipeline.sql  smartwealth.sql  workflow_ai_pipeline.sql
AI-engine/tests/: conftest.py
AI-engine/tests/unit/: test_loader_registry.py  (+19 more)
(+462 files in other folders)
