[project]
name = "smartwealth-ai-core"
version = "0.1.0"
description = "State-driven bank-grade AI orchestration baseline for SmartWealth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pyyaml>=6.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
